Add a series filter to sermon archive

--- a/sass/sermon_archive.scss
+++ b/sass/sermon_archive.scss
@@ -8,6 +8,10 @@
 
     &__search_form_minister_select {}
 
+    &__search_form_series_label {}
+
+    &__search_form_series_select {}
+
     &__search_form_button {}
 
     &__table {}
@@ -53,6 +57,10 @@
     &__sermon_author_title {}
 
     &__sermon_author {}
+
+    &__sermon_series_title {}
+
+    &__sermon_series {}
 
     &__sermon_texts_title {}
 
